--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,22 @@ verify_ssl = true
 black = "*"
 pycodestyle = "*"
 flake8 = "*"
+autopep8 = "*"
+pylint = "*"
 
 [packages]
 django = "*"
+dj-database-url = "*"
+gunicorn = "*"
+django-allauth = "*"
+django-crispy-forms = "*"
+stripe = "*"
+coverage = "*"
+psycopg2-binary = "*"
+boto3 = "*"
+django-countries = "*"
+pillow = "*"
+django-storages = "*"
 
 [requires]
 python_version = "3.7"
