--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ static/css/bootstrap-reboot.css
 static/css/bootstrap-utilities.css
 static/sass
 static/icons/*.svg
-!static/icons/bootstrap.svg
 .env
 package.json
 package-lock.json
@@ -20,3 +19,5 @@ static/css/bootstrap-grid.min.css
 static/css/bootstrap-reboot.min.css
 static/css/bootstrap-utilities.min.css
 static/css/bootstrap.min.css
+# Icons allowed
+!static/icons/bootstrap.svg
