--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ static/css/bootstrap-utilities.min.css
 static/css/bootstrap.min.css
 # Icons allowed
 !static/icons/bootstrap.svg
+!static/icons/logo.svg
