--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ boto3 = "*"
 pillow = "*"
 django-storages = "*"
 django-countries = "*"
+django-cleanup = "*"
 
 [requires]
 python_version = "3.8"
