Resized bg images to better fit new parallax

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ static/css/bootstrap.min.css
 docs
 home/static/home/js/homeORIG.js
 home/templates/home/homeORIG.html
+static/images/bg1 copy.jpg
+static/images/bg2 copy.jpg
