Further Styling landing page

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ home/static/home/js/homeORIG.js
 home/templates/home/homeORIG.html
 static/images/bg1 copy.jpg
 static/images/bg2 copy.jpg
+home/static/home/js/homeORIGviejo.js
