--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ static/images/bg2 ant.jpg
 static/images/bg1 ant.jpg
 static/images/bg.jpg
 home/templates/home/homeANT.html
+home/static/home/js/homeANT.js
