Styled email link in footer

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ static/images/bg1 ant.jpg
 static/images/bg.jpg
 home/templates/home/homeANT.html
 home/static/home/js/homeANT.js
+checkout/webhook_handler_functional.py
