Rounded up modal to confirm bag item deletion

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ static/images/bg.jpg
 home/templates/home/homeANT.html
 home/static/home/js/homeANT.js
 checkout/webhook_handler_functional.py
+bag/templates/bag/bagNEW.html
