Implemented styled datepicker with steps of 15 minutes for time

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ pillow = "*"
 django-storages = "*"
 django-countries = "*"
 django-cleanup = "*"
+django-bootstrap-datepicker-plus = "*"
 
 [requires]
 python_version = "3.8"
