Fixed unpredictability of gallery rendering

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ bag/templates/bag/bagNEW.html
 album/templates/album/albumBIS.html
 home/static/home/js/homeGSAP.js
 home/static/home/js/homePARALLAX.js
+album/templates/album/albumOKAY.html
